5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1573_1560.log
== TEST (2019-03-12 15:19:50) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:19:58) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.167926
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:20:31) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.207009
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:20:35) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.126433
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:21:09) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.204714
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:21:31) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:21:43) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.153059
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:24:25) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.134444
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:26:52) 
-- CODE:
string="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.154991
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:26:56) 
-- CODE:
string="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:27:25) 
-- CODE:
string="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:27:32) 
-- CODE:
string="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:32:49) 
-- CODE:
string="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower()
-- ERROR:
File "XXXX", line 3
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:33:07) 
-- CODE:
string="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:33:13) 
-- CODE:
string="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.191558
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:38:00) 
-- CODE:
string=."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.205756
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 1
    string=."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:38:03) 
-- CODE:
string=."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- ERROR:
File "XXXX", line 1
    string=."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:38:12) 
-- CODE:
string="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.165766
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
